--- a/portfolio.html
+++ b/portfolio.html
@@ -22,16 +22,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                    </div>
-                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -39,6 +29,30 @@
             </form>
         </div>
     </nav>
-    <p>This website is currently under construction!</p>
+    <!--- <p>This website is currently under construction!</p> --->
+    <div class="card-deck">
+        <div class="row justify-content-center">
+            <div class="col-6 col-xl-5">
+                <div class="card text-center" style="width: 18rem;">
+                    <img class="card-img-top" src="CombinationLock.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Digital Combination Lock</h5>
+                        <p class="card-text">This is was the final project in Introduction to Digital Systems. My partner and I created a digital combination lock on a FPGA development board, DE10-Lite, using the Quartus Prime Software. </p>
+                        <a href="CombinationLock.pdf" class="btn btn-primary">Documentation</a>
+                    </div>
+                </div> <!--Combination Lock-->
+            </div>
+            <div class="col-6 col-xl-5">
+                <div class="card text-center" style="width: 18rem;">
+                    <img class="card-img-top" src="LampRender.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Bedside Lamp</h5>
+                        <p class="card-text">This was a CAD design project. It is an original design of a bedside lamp I created in Autodesk Inventor.</p>
+                        <a href="https://www.evernote.com/shard/s628/sh/9f202828-f97f-40bf-863d-3305b8e70cc0/0146cecb69853a5ff4b07937dbbd61d2" class="btn btn-primary">Documentation</a>
+                    </div>
+                </div> <!--Combination Lock-->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
