Update 0.2.4 - Updated Navbar

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -37,7 +37,6 @@
                     <img class="card-img-top" src="CombinationLock.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Digital Combination Lock</h5>
-                        <p class="card-text">This is was the final project in Introduction to Digital Systems. My partner and I created a digital combination lock on a FPGA development board, DE10-Lite, using the Quartus Prime Software. </p>
                         <a href="CombinationLock.pdf" class="btn btn-primary">Documentation</a>
                     </div>
                 </div> <!--Combination Lock-->
@@ -46,8 +45,7 @@
                 <div class="card text-center" style="width: 18rem;">
                     <img class="card-img-top" src="LampRender.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Bedside Lamp</h5>
-                        <p class="card-text">This was a CAD design project. It is an original design of a bedside lamp I created in Autodesk Inventor.</p>
+                        <h5 class="card-title">Bedside Lamp CAD Design</h5>
                         <a href="https://www.evernote.com/shard/s628/sh/9f202828-f97f-40bf-863d-3305b8e70cc0/0146cecb69853a5ff4b07937dbbd61d2" class="btn btn-primary">Documentation</a>
                     </div>
                 </div> <!--Combination Lock-->
