--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-link active" aria-current="page" href="#">About</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -30,7 +30,7 @@
         </div>
     </nav>
     <p>This website is currently under construction!</p>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
