--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="collapse navbar-collapse" id="navbarColor02">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link active" aria-current="page" href="#">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -23,10 +23,6 @@
 					<a class="nav-link" href="about.html">About</a>
 				</li>
 			</ul>
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="text" placeholder="Search">
-				<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-			</form>
 		</div>
 	</nav>
 	<p>This website is currently under construction!</p>
