--- a/about.html
+++ b/about.html
@@ -27,6 +27,37 @@
     </nav>
     <p>This website is currently under construction!</p>
 
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Pictures/img6.jpg" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img4.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img0.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img1.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img2.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img3.png" class="d-block w-100">
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
