--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">Krutik Shah</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+		<div class="collapse" id="navbarToggleExternalContent">
+            <div class="btn-group">
+                <a href="index.html" class="btn btn-primary">Home</a>
+                <a href="portfolio.html" class="btn btn-primary active" aria-current="page">Portfolio</a>
+                <a href="about.html" class="btn btn-primary">About</a>
+            </div>
+        </div>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 
