Update 0.3.0 - Upgraded about page

--- a/about.html
+++ b/about.html
@@ -3,8 +3,11 @@
 <head>
     <link href="bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <!-- navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Krutik Shah</a>
         <div class="collapse" id="navbarToggleExternalContent">
@@ -32,6 +35,52 @@
             </ul>
         </div>
     </nav>
+
+    <!-- page starts here -->
+    <h1 class="h1-about">About Me</h1>
+    
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="p-about">
+            Hello! My name is Krutik Shah. I am an Electrical & Computer Engineering major,
+            at Rowan University, Class of 2023! I am passionate about PCB design & assembly,
+            3D printing, and robotics!
+          </p>
+          <h3 class="h3-about">Biography</h3>
+            <p class="p-about">
+              I was born in India (Gujarat) on April 10, 2000. I moved to the US in 2007 with my parents,
+              raised in Flemington, NJ where I went to Hunterdon Central Regional High School.
+              There at the high school, I was a part of the FIRST Robotics Team (FRC) Team 3637, 
+              where I developed a passion for engineering. I would not be where I am today without
+              the experience and knowledge I gained through that team. I was also a student worker
+              for school's IT department. After the dreadful college application process, I decided
+              to go to Rowan University for an ECE degree, and am now currently a student helper for
+              the ECE department, working in the Resource Center, Fabrication Center, and Assembly Center.
+            </p>
+          <h3 class="h3-about">Hobbies</h3>
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <ul>
+                  <li>3D Printing</li>
+                  <li>Web Developmnet</li>
+                  <li>Movies & TV</li>
+                  <li>Photography</li>
+                  <li>Video Production</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+            
+          <a href="Resume.pdf" class="btn btn-primary">Resume</a>
+        </div>
+        <div class="col">
+          <img src="Pictures/img1.jpg" class="d-block w-75 rounded mx-auto">
+        </div>
+      </div>
+    </div>
+
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -43,9 +92,6 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Pictures/img0.png" class="d-block w-100">
-          </div>
-          <div class="carousel-item">
             <img src="Pictures/img1.png" class="d-block w-100">
           </div>
           <div class="carousel-item">
