--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
+	<!-- navigation bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">Krutik Shah</a>
 		<div class="collapse" id="navbarToggleExternalContent">
@@ -32,7 +33,12 @@
 			</ul>
 		</div>
 	</nav>
-		<p>This website is currently under construction!</p>
+	
+
+
+	<p>This website is currently under construction!</p>
+	
+	
 	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
