--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 
 
-	<p>This website is currently under construction!</p>
+	<p>This website is currently under construction! Updated</p>
 	
 	
 	<script src="js/bootstrap.bundle.min.js"></script>
