Completed Portfolio (as of now)

--- a/about.html
+++ b/about.html
@@ -65,7 +65,6 @@
                 <ul>
                   <li>3D Printing</li>
                   <li>Web Developmnet</li>
-                  <li>Movies & TV</li>
                   <li>Photography</li>
                   <li>Video Production</li>
                 </ul>
@@ -74,6 +73,7 @@
           </div>
             
           <a href="Resume.pdf" class="btn btn-primary">Resume</a>
+          <a href="https://www.linkedin.com/in/krutik-p-shah" class="btn btn-primary">LinkedIn</a>
         </div>
         <div class="col">
           <img src="Pictures/img1.jpg" class="d-block w-75 rounded mx-auto">
