--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <link href="bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -32,30 +33,143 @@
             </ul>
         </div>
     </nav>
-    <!--- <p>This website is currently under construction!</p> --->
-    <div class="card-deck">
-        <div class="row justify-content-center">
-            <div class="col-6 col-xl-5">
-                <div class="card text-center" style="width: 18rem;">
-                    <img class="card-img-top" src="CombinationLock.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Digital Combination Lock</h5>
-                        <a href="CombinationLock.pdf" class="btn btn-primary">Documentation</a>
-                    </div>
-                </div> <!--Combination Lock-->
-            </div>
-            <div class="col-6 col-xl-5">
-                <div class="card text-center" style="width: 18rem;">
-                    <img class="card-img-top" src="LampRender.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Bedside Lamp CAD Design</h5>
-                        <a href="https://www.evernote.com/shard/s628/sh/9f202828-f97f-40bf-863d-3305b8e70cc0/0146cecb69853a5ff4b07937dbbd61d2" class="btn btn-primary">Documentation</a>
-                    </div>
-                </div> <!--Combination Lock-->
-            </div>
-        </div>
-    </div>
 
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="h1-portfolio" font-family="Montserrat">My Portfolio</h1>
+            <p class="lead text-muted">Welcome to my portfolio! This is where you will see all my projects!</p>
+        </div>
+    </section>
+        <div class="album py-5 bg-gray-700">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Combination Lock</div>
+                  <img class="card-img-top" src="Pictures\Projects\CombinationLock.png" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">This is a combination lock designed with Intel Quartus Prime Lite and using a DE-10 Lite FPGA.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/CombinationLock.pdf">View Documentation</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Stewart-Gough Platform</div>
+                  <img class="card-img-top" src="Pictures\Projects\Stewart-Gough.jpg" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">This is an embedded system designed to demonstrate a Stewart-Gough-like platform.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Stewart-Gough.pdf">View Documentation</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Tri-Oscillator</div>
+                  <img class="card-img-top" src="Pictures\Projects\Tri-Oscillator.png" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">This is a PCB using three oscillator circuits, demonstrating the use of non-linear components.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Tri-Oscillator.pdf">View Documentation</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Rowan ECE Website</div>
+                  <img class="card-img-top" src="Pictures\Projects\rowanece.png" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">I am a developer of the website used by Rowan College of Engineering. This is the central database of resources and services used by ECE students & faculty.</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="https://gitlab.com/karastratton/resource-website">View Repository</a>
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="https://rowanece.com">View Website</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Keysight Equipment Tutorial Videos</div>
+                  <img class="card-img-top" src="Pictures\Projects\KeysightVideos.jpg" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">As part of my internship with Keysight Technologies, I created videos educating viewers on how to utilize ECE equipment.</p>
+                    <br>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/c83b443d-6104-4d24-7f58-137a83f8d151">View Videos</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card text-white bg-dark mb-4 box-shadow">
+                  <div class="card-header">Drone</div>
+                  <img class="card-img-top" src="Pictures\Projects\Drone.png" alt="Card image cap" width="350" height="300">
+                  <div class="card-body">
+                    <p class="card-text">This is a drone I CAD designed and 3D printed. Linked below is a video of me struggling (but succeeded) to fly through an obstacle course!</p>
+                    <br>
+                    <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/sec2-drone">View Repository</a>
+                        <a type="button" class="btn btn-sm btn-outline-secondary" href="https://shared-assets.adobe.com/link/896dd99d-0833-4be4-4be9-ddd54c4b6d7f">View Video</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="card text-white bg-dark mb-4 box-shadow">
+                    <div class="card-header">This Website!</div>
+                    <img class="card-img-top" src="Pictures\Projects\Website.png" alt="Card image cap" width="350" height="300">
+                    <div class="card-body">
+                      <p class="card-text">The website you are currently looking at is one of my projects! It is a static site built up from scratch with Bootstrap.</p>
+                      <br>
+                      <br>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <a type="button" class="btn btn-sm btn-outline-secondary" href="https://github.com/shahkr85/shahkr85.github.io">View Repository</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="card text-white bg-dark mb-4 box-shadow">
+                    <div class="card-header">Gimbal Stabilization Control System</div>
+                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=In Progress!" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22508%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20508%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17f3a4decfc%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17f3a4decfc%22%3E%3Crect%20width%3D%22508%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22169.74478912353516%22%20y%3D%22123.70000076293945%22%3EIn Progress%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image cap" width="350" height="300">
+                    <div class="card-body">
+                      <p class="card-text">This is a closed-loop control system which automatically stabilizes the position of a gimbal. Made for rocketry applications, to control trajectory of rocket.</p>
+                      <br>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <a type="button" class="btn btn-sm btn-outline-secondary">In Progress</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
