Fixed drone image in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
               <div class="col-md-4">
                 <div class="card text-white bg-dark mb-4 box-shadow">
                   <div class="card-header">Drone</div>
-                  <img class="card-img-top" src="Pictures\Projects\Drone.png" alt="Card image cap" width="350" height="300">
+                  <img class="card-img-top" src="Pictures\Projects\drone.png" alt="Card image cap" width="350" height="300">
                   <div class="card-body">
                     <p class="card-text">This is a drone I CAD designed and 3D printed. Linked below is a video of me struggling (but succeeded) to fly through an obstacle course!</p>
                     <br>
