--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="bootstrap.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+  <link href="bootstrap.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -63,6 +64,7 @@
                   <img class="card-img-top" src="Pictures\Projects\Stewart-Gough.jpg" alt="Card image cap" width="350" height="300">
                   <div class="card-body">
                     <p class="card-text">This is an embedded system designed to demonstrate a Stewart-Gough-like platform.</p>
+                    <br>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/Stewart-Gough.pdf">View Documentation</a>
