--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">Krutik Shah</a>
 		<div class="collapse" id="navbarToggleExternalContent">
-            <div class="btn-group">
-                <a href="index.html" class="btn btn-primary">Home</a>
-                <a href="portfolio.html" class="btn btn-primary active" aria-current="page">Portfolio</a>
-                <a href="about.html" class="btn btn-primary">About</a>
-            </div>
-        </div>
+      <div class="btn-group">
+        <a href="index.html" class="btn btn-primary">Home</a>
+        <a href="portfolio.html" class="btn btn-primary active" aria-current="page">Portfolio</a>
+        <a href="about.html" class="btn btn-primary">About</a>
+      </div>
+    </div>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -35,11 +35,42 @@
 		</div>
 	</nav>
 	
-
-
-	<p>This website is currently under construction! Updated</p>
-	
-	
+	<!-- Carousel -->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Pictures/img1.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img2.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img3.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img4.png" class="d-block w-100">
+          </div>
+          <div class="carousel-item">
+            <img src="Pictures/img6.jpg" class="d-block w-100">
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
 	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
