Updated front page & corrected issues

--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
         </p>
         <h3 class="h3-about">Biography</h3>
           <p class="p-about">
-            I was born in India (Gujarat) on April 10, 2000. I moved to the US in 2007 with my parents,
+            I was born in Gujarat, India on April 10, 2000. I moved to the US in 2007 with my parents,
             raised in Flemington, NJ where I went to Hunterdon Central Regional High School.
             There at the high school, I was a part of the FIRST Robotics Team (FRC) Team 3637, 
             where I developed a passion for engineering. I would not be where I am today without
             the experience and knowledge I gained through that team. I was also a student worker
-            for school's IT department. After the dreadful college application process, I decided
+            for school's IT department. After applying to my colleges, I decided
             to go to Rowan University for an ECE degree, and am now currently a student helper for
             the ECE department, working in the Resource Center, Fabrication Center, and Assembly Center.
           </p>
