--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Krutik Shah</title>
 	<link href="bootstrap.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Playfair+Display:ital,wght@1,800&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- navigation bar -->
@@ -35,6 +38,10 @@
 		</div>
 	</nav>
 	
+  <!-- Quote -->
+    <h1 class="h1-quote">“All that we have to decide is what to do with the time that is given us,”</h1>
+    <br>
+    <h2 class="h2-quote">- Gandalf, Lord of the Rings: Fellowship of the Ring</h2>
 	<!-- Carousel -->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
