--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="h1-portfolio" font-family="Montserrat">My Portfolio</h1>
-            <p class="lead text-muted">Welcome to my portfolio! This is where you will see all my projects!</p>
+            <p class="lead text-muted">Welcome to my portfolio! This is where you will see all of my projects!</p>
         </div>
     </section>
         <div class="album py-5 bg-gray-700">
