--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</nav>
 	
   <!-- Quote -->
-    <h1 class="h1-quote">“All that we have to decide is what to do with the time that is given us,”</h1>
+    <h1 class="h1-quote">“All that we have to decide is what to do with the time that is given to us,”</h1>
     <br>
     <h2 class="h2-quote">- Gandalf, Lord of the Rings: Fellowship of the Ring</h2>
 	<!-- Carousel -->
