--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
       <div class="form h-100">
         <form class="mb-5" action="https://formspree.io/f/mwkyblao" method="post" id="contactForm" name="contactForm">
           <div class="d-flex flex-row flex-wrap justify-content-center">
-          <!--<div class="row">-->
+            <!--<div class="row">-->
             <div class="form-group mb-5" style="width:25em; justify-self:center;">
               <label for="" class="col-form-label">Name *</label>
               <br>
@@ -103,9 +103,9 @@
               <br>
               <input type="text" class="form-control" name="email" id="email" placeholder="Your email" required>
             </div>
-          <!--</div>-->
+           <!--</div>-->
 
-          <!--<div class="row">-->
+           <!--<div class="row">-->
             <div class="form-group mb-5" style="width:25em; justify-self:center;">
               <label for="" class="col-form-label">Phone</label>
               <br>
@@ -116,20 +116,22 @@
               <br>
               <input type="text" class="form-control" name="company" id="company" placeholder="Company name">
             </div>
-          <!--</div>-->
-
-          <!--<div class="row">-->
+            <!--</div>-->
+          </div>
+          <div class="flex-row flex-wrap justify-content-center">
+            <!--<div class="row">-->
             <div class="form-group mb-5" style="width:50em; justify-self:center;">
               <label for="message" class="col-form-label">Message *</label>
-              <textarea class="form-control-center" name="message" id="message" cols="30" rows="4" placeholder="Write your message" required></textarea>
+              <br>
+              <textarea class="form-control" name="message" id="message" cols="4" rows="4" placeholder="Write your message" required></textarea>
             </div>
-          <!--</div>-->
-          <!--<div class="row-right">-->
+            <!--</div>-->
+            <!--<div class="row-right">-->
             <div class="form-group mb-5" style="width:25em; justify-self:center;">
+              <br>
               <button type="submit" class="btn btn-primary">Send</button>
               <span class="submitting"></span>
             </div>
-          <!--</div>-->
           </div>
         </form>
       </div>
