Updating with new project

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,18 @@
                 </div>
               </div>
             <!--</div>-->
+            <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+              <div class="card-header">Custom Composite DLP Printing</div>
+              <img class="card-img-top" src="Pictures\Projects\CompositePrinter.JPG" alt="Card image cap" width="350" height="300">
+              <div class="card-body">
+                <p class="card-text">This is a custom resin 3D printer being developed to create composite parts out of resin and fiberglass mats. Full DLP printing functionality has been achieved, and we are now developing a belt-drive system to incorporate the composites.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a type="button" class="btn btn-sm btn-outline-secondary">In Progress</a>
+                  </div>
+                </div>
+              </div>
+            </div>
             <!--<div class="col-md-4">-->
               <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
                 <div class="card-header">Stewart-Gough Platform</div>
@@ -155,19 +167,6 @@
               </div>
             <!--</div>-->
             <!--<div class="col-md-4">-->
-              <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
-                <div class="card-header">Gimbal Stabilization Control System</div>
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=In Progress!" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22508%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20508%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_17f3a4decfc%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_17f3a4decfc%22%3E%3Crect%20width%3D%22508%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22169.74478912353516%22%20y%3D%22123.70000076293945%22%3EIn Progress%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Card image cap" width="350" height="300">
-                <div class="card-body">
-                  <p class="card-text">This is a closed-loop control system which automatically stabilizes the position of a gimbal. Made for rocketry applications, to control trajectory of rocket.</p>
-                  <br>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <a type="button" class="btn btn-sm btn-outline-secondary">In Progress</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
             <!--</div>-->
           <!--</div>-->
         </div>
