--- a/portfolio.html
+++ b/portfolio.html
@@ -65,10 +65,22 @@
               <div class="card-header">Custom Composite DLP Printing</div>
               <img class="card-img-top" src="Pictures\Projects\CompositePrinter.JPG" alt="Card image cap" width="350" height="300">
               <div class="card-body">
-                <p class="card-text">This is a custom resin 3D printer being developed to create composite parts out of resin and fiberglass mats. Full DLP printing functionality has been achieved, and we are now developing a belt-drive system to incorporate the composites.</p>
+                <p class="card-text">Custom resin 3D printer developed to create composite parts out of resin and fiberglass mats. Full resin DLP printing functionality has been achieved, and we are now developing a belt-drive system to incorporate the composites.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a type="button" class="btn btn-sm btn-outline-secondary">In Progress</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
+              <div class="card-header">ADS-B Flight Tracker</div>
+              <img class="card-img-top" src="Pictures\Projects\ADS-B Flight Tracker.JPG" alt="Card image cap" width="350" height="300">
+              <div class="card-body">
+                <p class="card-text">Using an RTL-SDR & an open source software "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a type="button" class="btn btn-sm btn-outline-secondary" href="Projects/ADS-B Flight Tracker.pdf">View Documentation</a>
                   </div>
                 </div>
               </div>
