--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
           <p class="p-about">
             Hello! My name is Krutik Shah. I am an Electrical & Computer Engineering major,
             at Rowan University, Class of 2023! I am passionate about PCB design & assembly,
-            3D printing, and robotics!
+            3D printing, robotics, aerospace and aeronautics!
           </p>
           <h3 class="h3-about">Biography</h3>
             <p class="p-about">
@@ -57,9 +57,14 @@
               There at the high school, I was a part of the FIRST Robotics Team (FRC) Team 3637, 
               where I developed a passion for engineering. I would not be where I am today without
               the experience and knowledge I gained through that team. I was also a student worker
-              for school's IT department. After applying to my colleges, I decided
-              to go to Rowan University for an ECE degree, and am now currently a student helper for
-              the ECE department, working in the Resource Center, Fabrication Center, and Assembly Center.
+              for school's IT department. After applying to my colleges, I decided to go to Rowan University 
+              for an ECE degree, where I was a student worker for the ECE department, working in 
+              the Resource Center, Fabrication Center, and Assembly Center.
+              <br>
+              Currently, I am working on a research project for the Advanced Materials & Manufacturing Institute (AMMI),
+              at the South Jersey Technology Park where I am helping develop a composite DLP printer.
+              I am also currently the Vice President of the American Institute of Aeronautics & Astronautics (AIAA),
+              the student branch at Rowan University.
             </p>
           <h3 class="h3-about">Hobbies</h3>
           <div class="container">
@@ -135,6 +140,43 @@
           </div>
         </form>
       </div>
+    </div>
+  </div>
+
+  <!-- Carousel -->
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="Pictures/img1.png" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/img2.png" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/img3.png" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/img4.png" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/img6.jpg" class="d-block w-100">
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
   
