--- a/index.html
+++ b/index.html
@@ -40,10 +40,149 @@
 	</nav>
 	
   <!-- Quote -->
+    <br>
     <h1 class="h1-quote">“All that we have to decide is what to do with the time that is given to us,”</h1>
     <br>
     <h2 class="h2-quote">- Gandalf, Lord of the Rings: Fellowship of the Ring</h2>
+    <br>
+    <br>
+    <h1 class="h1-quote">Photography</h1>
 	
+    <!-- Carousel -->
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15" aria-label="Slide 16"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="16" aria-label="Slide 17"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="17" aria-label="Slide 18"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="18" aria-label="Slide 19"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="19" aria-label="Slide 20"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="20" aria-label="Slide 21"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="21" aria-label="Slide 22"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="22" aria-label="Slide 23"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="23" aria-label="Slide 24"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="24" aria-label="Slide 25"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="25" aria-label="Slide 26"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="26" aria-label="Slide 27"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="27" aria-label="Slide 28"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="28" aria-label="Slide 29"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="29" aria-label="Slide 30"></button>
+    </div>
+    <div class="carousel-inner" style="width: 50%; margin-right: auto; margin-left: auto; display:block;">
+      <div class="carousel-item active">
+        <img src="Pictures/Photography/IMG1.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG2.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG3.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG4.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG5.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG6.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG7.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG8.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG9.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG10.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG11.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG12.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG13.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG14.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG15.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG16.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG17.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG18.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG19.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG20.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG21.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG22.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG23.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG24.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG25.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG26.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG27.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG28.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG29.jpg" class="d-block w-100">
+      </div>
+      <div class="carousel-item">
+        <img src="Pictures/Photography/IMG30.jpg" class="d-block w-100">
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
 	<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
