--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
             </div>
             <div class="card text-white bg-dark mb-4 box-shadow" style="width:25em">
               <div class="card-header">ADS-B Flight Tracker</div>
-              <img class="card-img-top" src="Pictures\Projects\ADS-B Flight Tracker.JPG" alt="Card image cap" width="350" height="300">
+              <img class="card-img-top" src="Pictures\Projects\ADS-B_Flight_Tracker.JPG" alt="Card image cap" width="350" height="300">
               <div class="card-body">
                 <p class="card-text">Using an RTL-SDR & an open source software "Dump1090", flights within a local area were tracked. The main goal of this project is to manually decode various ADS-B signals received by the RTL-SDR and analyze the algorithms used by Dump1090 to decode.</p>
                 <div class="d-flex justify-content-between align-items-center">
